[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Rohit Bhandari <jainrohit090@gmail.com>"]
description = "A key value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }



[lib]
name = "kvs"
path = "src/lib.rs"

[dev-dependencies]
predicates = "3.1.0"
assert_cmd = "2.0.14"
